customer and pricign section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4c901afbcb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="css/glide.min.css">
 </head>
 <body>
     <!-- scroll to the top -->
@@ -200,7 +201,21 @@
                         <img src="images/team.jpg" class="img-fluid">
                     <div class="services__overlay">
                         <div class="services__overlay-text">Izabell Wings <br />
-                        Manicurist</div>
+                        Manicurist <br />
+                        <p class="small pt-3">Find her on:</p>
+                        <a href="https://facebook.com/" target="_blank">
+                        <i class="fab fa-facebook-square text-primary mr-2"></i>
+                        </a>
+                        <a href="https://twitter.com/" target="_blank">
+                        <i class="fab fa-twitter-square mr-2 text-info"></i>
+                        </a>
+                        <a href="https://instagram.com/" target="_blank">
+                        <i class="fab fa-instagram-square mr-2 services__insta"></i>
+                        </a>
+                        <a href="https://pl.pinterest.com/" target="_blank">
+                        <i class="fab fa-pinterest-square text-danger"></i>
+                        </a>
+                    </div>
                     </div>
                     </div>
                 </div>
@@ -209,7 +224,22 @@
                         <img src="images/team2.jpg" class="img-fluid">
                     <div class="services__overlay">
                         <div class="services__overlay-text">Stephani Yellst <br />
-                        Manicurist</div>
+                        Manicurist  <br />
+                        <p class="small pt-3">Find her on:</p>
+                        <a href="https://facebook.com/" target="_blank">
+                            <i class="fab fa-facebook-square text-primary mr-2"></i>
+                            </a>
+                            <a href="https://twitter.com/" target="_blank">
+                            <i class="fab fa-twitter-square mr-2 text-info"></i>
+                            </a>
+                            <a href="https://instagram.com/" target="_blank">
+                            <i class="fab fa-instagram-square mr-2 services__insta"></i>
+                            </a>
+                            <a href="https://pl.pinterest.com/" target="_blank">
+                            <i class="fab fa-pinterest-square text-danger"></i>
+                            </a>
+                    </div>
+
                     </div>
                     </div>
                 </div>
@@ -218,8 +248,21 @@
                         <img src="images/team3.jpg" class="img-fluid">
                     <div class="services__overlay">
                         <div class="services__overlay-text">Izu Ughut <br />
-                        Menager</div>
-                        <button class="services__contact-btn" id="contact-btn">Contact me</button>
+                        Menager <br />
+                        <p class="small pt-3">Find her on:</p>
+                        <a href="https://facebook.com/" target="_blank">
+                            <i class="fab fa-facebook-square text-primary mr-2"></i>
+                            </a>
+                            <a href="https://twitter.com/" target="_blank">
+                            <i class="fab fa-twitter-square mr-2 text-info"></i>
+                            </a>
+                            <a href="https://instagram.com/" target="_blank">
+                            <i class="fab fa-instagram-square mr-2 services__insta"></i>
+                            </a>
+                            <a href="https://pl.pinterest.com/" target="_blank">
+                            <i class="fab fa-pinterest-square text-danger"></i>
+                            </a>
+                    </div>
                     </div>
 
 
@@ -236,15 +279,130 @@
             <div class="container">
                 <div class="row py-5">
                     <div class="col-12 text-center">
-                        <h2 class="comments__heading py-3">Customers opinion</h2>
+                        <h2 class="comments__heading py-3">Customers testimonials</h2>
                         <i class="fas fa-arrow-down fa-2x"></i>
 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <div id="Indicators" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                              <li data-target="#Indicators" data-slide-to="0" class="active"></li>
+                              <li data-target="#Indicators" data-slide-to="1"></li>
+                              <li data-target="#Indicators" data-slide-to="2"></li>
+                              <li data-target="#Indicators" data-slide-to="3"></li>
+                              <li data-target="#Indicators" data-slide-to="4"></li>
+
+                            </ol>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="https://randomuser.me/api/portraits/women/76.jpg" alt="user" class="img-fluid"> <blockquote class="py-5 w-50 mx-auto">"This salon is brilliant, these girls made awsome work with nail's. I will come here again for sure. With all due respect, I can recommend this nails salon!"</blockquote>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="https://randomuser.me/api/portraits/women/77.jpg" alt="user" class="img-fluid"> <blockquote class="py-5 w-50 mx-auto">"This salon is brilliant, these girls made awsome work with nail's. I will come here again for sure. With all due respect, I can recommend this nails salon!"</blockquote>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="https://randomuser.me/api/portraits/women/73.jpg" alt="user" class="img-fluid"> <blockquote class="py-5 w-50 mx-auto">"This salon is brilliant, these girls made awsome work with nail's. I will come here again for sure. With all due respect, I can recommend this nails salon!"</blockquote>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="https://randomuser.me/api/portraits/women/71.jpg" alt="user" class="img-fluid"> <blockquote class="py-5 w-50 mx-auto">"This salon is brilliant, these girls made awsome work with nail's. I will come here again for sure. With all due respect, I can recommend this nails salon!"</blockquote>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="https://randomuser.me/api/portraits/women/69.jpg" alt="user" class="img-fluid">
+                                 <blockquote class="py-5 w-50 mx-auto">"This salon is brilliant, these girls made awsome work with nail's. I will come here again for sure. With all due respect, I can recommend this nails salon!"</blockquote>
+                              </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#Indicators" role="button" data-slide="prev">
+
+                            </a>
+                            <a class="carousel-control-next" href="#Indicators" role="button" data-slide="next">
+
+                            </a>
+                          </div>
+                    </div>
+
+
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+    <!-- end of comments -->
+    <!-- pricing -->
+    <section class="py-5" data-aos="fade-up">
+        <div class="container">
+            <div class="row pb-5 services__heading">
+                <div class="col-12 text-center">
+                    <h2 class="services__divider">Special Pricing</h2>
+                    <p class="small pt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit pariatur ad recusandae voluptas perferendis.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="pricing__classic-item">
+                        <div class="pricing__body">
+                            <h4>Essential</h4>
+                            <p>1h Session</p>
+                        </div>
+                        <div class="pricing__value">
+                            <h4>$35.00</h4>
+                        </div>
+                    </div>
+                    <div class="pricing__classic-item">
+                        <div class="pricing__body">
+                            <h4>Gel Polish</h4>
+                            <p>40-50 Minute Session</p>
+                        </div>
+                        <div class="pricing__value">
+                            <h4>$55.00</h4>
+                        </div>
+                    </div>
+                    <div class="pricing__classic-item">
+                        <div class="pricing__body">
+                            <h4>Nail Design</h4>
+                            <p>30-60 Minute Session</p>
+                        </div>
+                        <div class="pricing__value">
+                            <h4>$65.00</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="pricing__classic-item">
+                        <div class="pricing__body">
+                            <h4>Paraffin Treatment</h4>
+                            <p>1h Session</p>
+                        </div>
+                        <div class="pricing__value">
+                            <h4>$25.00</h4>
+                        </div>
+                    </div>
+                    <div class="pricing__classic-item">
+                        <div class="pricing__body">
+                            <h4>Pedicure</h4>
+                            <p>30-40 Minute Session</p>
+                        </div>
+                        <div class="pricing__value">
+                            <h4>$15.00</h4>
+                        </div>
+                    </div>
+                    <div class="pricing__classic-item">
+                        <div class="pricing__body">
+                            <h4>Manicure</h4>
+                            <p>40 Minute Session</p>
+                        </div>
+                        <div class="pricing__value">
+                            <h4>$25.00</h4>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- end of comments -->
+    <!-- end of pricing -->
+
 
 
 
@@ -265,6 +423,9 @@
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
+    <script defer
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    </script>
     <script src="main.js"></script>
 </body>
 </html>
