Contact and footer complete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4c901afbcb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="css/glide.min.css">
 </head>
 <body>
     <!-- scroll to the top -->
@@ -402,7 +401,116 @@
         </div>
     </section>
     <!-- end of pricing -->
+    <!-- contact -->
+    <section class="py-5" data-aos="fade-up">
+        <div class="container">
+            <div class="row pb-5 services__heading">
+                <div class="col-12 text-center">
+                    <h2 class="services__divider">Find us there!</h2>
+                    <p class="small pt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit pariatur ad recusandae voluptas perferendis.</p>
+                </div>
+            </div>
+            <div class="row py-5">
+                <div class="col-lg-6 text-center">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10184.501602536664!2d19.156488445753475!3d50.34556641474901!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716d9fe8820183d%3A0xfd0da08d13b550e3!2sBory%2C%2042-500%20B%C4%99dzin!5e0!3m2!1spl!2spl!4v1597751463180!5m2!1spl!2spl" width="400" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
+                <div class="col-lg-6 contact py-5 py-lg-0">
 
+                        <h2>Get in touch</h2>
+                        <p>Send us your message right here</p>
+                        <form id="form">
+                            <div class="contact__form-control">
+                                <input type="text" id="name" class="contact__form-input" placeholder="Enter name">
+                                <small></small>
+                            </div>
+                            <div class="contact__form-control">
+                                <input type="email" id="emailAdd" class="contact__form-input" placeholder="Enter email">
+                                <small></small>
+                            </div>
+                            <div class="contact__form-control">
+                                <input type="text" id="phoneNum" class="contact__form-input" placeholder="Enter phone number">
+                                <small></small>
+                            </div>
+                            <div class="contact__form-control">
+                                <textarea name="message" id="message" cols="30" rows="4" class="contact__form-input" placeholder="Enter message"></textarea>
+                                <small></small>
+
+                            </div>
+                            <button class="contact__btn" id="contact-btn">Send</button>
+                        </form>
+
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- end of contact -->
+    <!-- footer -->
+    <footer class="py-5" data-aos="fade-up">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-3 col-lg-3 footer__heading">
+                    <h2 class="footer__divider">About us</h2>
+                    <p class="small pt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit pariatur ad recusandae voluptas perferendis.</p>
+
+                </div>
+                <div class="col-xl-3 col-lg-3 footer__heading">
+                    <h2 class="footer__divider">Open at:</h2>
+                    <ul class="pt-3">
+                        <li class="pb-1">Monday: 9-17</li>
+                        <li class="py-1">Tuesday: 9-17</li>
+                        <li class="py-1">Wednesday: 9-17</li>
+                        <li class="py-1">Thursday: 9-17</li>
+                        <li class="py-1">Friday: 9-17</li>
+                        <li class="py-1">Saturday: Closed</li>
+                        <li class="py-1">Sunday: Closed</li>
+                    </ul>
+                </div>
+                <div class="col-xl-3 col-lg-3 footer__heading">
+                    <h2 class="footer__divider">Contact Us</h2>
+                    <ul class="pt-3">
+                        <li><i class="fas fa-map-marker-alt"></i>  Washington, USA 6036 Richmond hwy., Alexandria, VA, 2230</li>
+                        <li class="py-2"><i class="fas fa-mobile-alt"></i>    +1 (409) 987–5874</li>
+                        <li class="py-2"><i class="far fa-envelope"></i> nailsempire@gmail.com</li>
+
+                    </ul>
+                </div>
+                <div class="col-xl-3 col-lg-3 footer__heading">
+                    <h2 class="footer__divider">Navigation</h2>
+                    <ul class="pt-3">
+                          <li class="pb-1">
+                            <a href="index.html">Home</a>
+                          </li>
+                          <li class="py-1">
+                            <a href="about.html">About</a>
+                          </li>
+                          <li class="py-1">
+                            <a href="services.html">Services</a>
+                          </li>
+                          <li class="py-1">
+                            <a href="works.html">Works</a>
+                          </li>
+                          <li class="py-1">
+                            <a href="contact.html">Contact</a>
+                          </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- end of footer -->
+    <!-- copyright -->
+    <section class="footer__copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p class="mt-3">Copyright &copy; 2020 All rights reserved | This template is made <i class="fas fa-heart"></i> by FRN</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of copyright -->
 
 
 
@@ -423,9 +531,6 @@
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
-    <script defer
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
-    </script>
     <script src="main.js"></script>
 </body>
 </html>
