--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
+    <!-- preloader -->
+    <div id="preloader-active">
+        <div class="preloader d-flex align-items-center justify-content-center">
+            <div class="preloader-inner position-relative">
+                <div class="preloader-circle">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of preloader -->
     <!-- scroll to the top -->
     <div class="btn-container">
         <button id="scrollToTop" class="btn-container__scrollToTop">
@@ -105,17 +116,14 @@
         <div class="container pt-lg-4">
             <div class="row">
                 <div class="col-lg-5" >
-                    <div class="slider__heading" data-aos="fade-right" data-aos-once="true"
-                    data-aos-duration="1500">
+                    <div class="slider__heading" data-aos="fade-right">
                     <h1>Nails detail is a key</h1>
                     <p>The best products in the world in our local.</p>
                     <button class="slider__btn">Read more</button>
                     </div>
 
                 </div>
-                <div class="col-lg-7 slider__bg" data-aos="fade-left"
-                data-aos-once="true"
-                data-aos-duration="1500">
+                <div class="col-lg-7 slider__bg" data-aos="fade-left">
 
                 </div>
             </div>
@@ -411,8 +419,8 @@
                 </div>
             </div>
             <div class="row py-5">
-                <div class="col-lg-6 text-center">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10184.501602536664!2d19.156488445753475!3d50.34556641474901!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716d9fe8820183d%3A0xfd0da08d13b550e3!2sBory%2C%2042-500%20B%C4%99dzin!5e0!3m2!1spl!2spl!4v1597751463180!5m2!1spl!2spl" width="400" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <div class="col-lg-6">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10184.501602536664!2d19.156488445753475!3d50.34556641474901!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716d9fe8820183d%3A0xfd0da08d13b550e3!2sBory%2C%2042-500%20B%C4%99dzin!5e0!3m2!1spl!2spl!4v1597751463180!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="contact__map"></iframe>
                 </div>
                 <div class="col-lg-6 contact py-5 py-lg-0">
 
@@ -520,7 +528,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
-        duration: 1000,
+
 
       });
     </script>
