--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4c901afbcb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 </head>
 <body>
     <!-- preloader -->
@@ -116,14 +117,14 @@
         <div class="container pt-lg-4">
             <div class="row">
                 <div class="col-lg-5" >
-                    <div class="slider__heading" data-aos="fade-right">
+                    <div class="slider__heading">
                     <h1>Nails detail is a key</h1>
                     <p>The best products in the world in our local.</p>
                     <button class="slider__btn">Read more</button>
                     </div>
 
                 </div>
-                <div class="col-lg-7 slider__bg" data-aos="fade-left">
+                <div class="col-lg-7 slider__bg">
 
                 </div>
             </div>
@@ -152,7 +153,7 @@
     </section>
     <!-- end of about us section -->
     <!-- services section -->
-    <section class="py-3">
+    <section class="py-3" data-aos="fade-up">
         <div class="container">
             <div class="row pb-5 services__heading">
                 <div class="col-12 text-center">
@@ -195,7 +196,7 @@
     <!-- end of services section -->
     <!-- team -->
     <section class="py-5">
-        <div class="container" data-aos="fade-up" >
+        <div class="container">
             <div class="row pb-5 services__heading">
                 <div class="col-12 text-center">
                     <h2 class="services__divider">Our team</h2>
@@ -205,7 +206,6 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="services__container-img">
-                        <img src="images/team.jpg" class="img-fluid">
                     <div class="services__overlay">
                         <div class="services__overlay-text">Izabell Wings <br />
                         Manicurist <br />
@@ -227,8 +227,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 py-5 py-lg-0">
-                    <div class="services__container-img">
-                        <img src="images/team2.jpg" class="img-fluid">
+                    <div class="services__container-img2">
                     <div class="services__overlay">
                         <div class="services__overlay-text">Stephani Yellst <br />
                         Manicurist  <br />
@@ -251,8 +250,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="services__container-img">
-                        <img src="images/team3.jpg" class="img-fluid">
+                    <div class="services__container-img3">
                     <div class="services__overlay">
                         <div class="services__overlay-text">Izu Ughut <br />
                         Menager <br />
@@ -455,7 +453,7 @@
     </section>
     <!-- end of contact -->
     <!-- footer -->
-    <footer class="py-5" data-aos="fade-up">
+    <footer class="py-5">
         <div class="container">
             <div class="row">
                 <div class="col-xl-3 col-lg-3 footer__heading">
@@ -522,16 +520,6 @@
 
 
 
-
-
-
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init({
-
-
-      });
-    </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -540,5 +528,9 @@
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
     <script src="main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
