Added the footer into the section

--- a/about.html
+++ b/about.html
@@ -115,6 +115,71 @@
         </div>
     </section>
     <!-- end of about us section -->
+    <!-- footer -->
+    <footer class="py-5" data-aos="fade-up">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-3 col-lg-3 footer__heading">
+                    <h2 class="footer__divider">About us</h2>
+                    <p class="small pt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit pariatur ad recusandae voluptas perferendis.</p>
+
+                </div>
+                <div class="col-xl-3 col-lg-3 footer__heading">
+                    <h2 class="footer__divider">Open at:</h2>
+                    <ul class="pt-3">
+                        <li class="pb-1">Monday: 9-17</li>
+                        <li class="py-1">Tuesday: 9-17</li>
+                        <li class="py-1">Wednesday: 9-17</li>
+                        <li class="py-1">Thursday: 9-17</li>
+                        <li class="py-1">Friday: 9-17</li>
+                        <li class="py-1">Saturday: Closed</li>
+                        <li class="py-1">Sunday: Closed</li>
+                    </ul>
+                </div>
+                <div class="col-xl-3 col-lg-3 footer__heading">
+                    <h2 class="footer__divider">Contact Us</h2>
+                    <ul class="pt-3">
+                        <li><i class="fas fa-map-marker-alt"></i>  Washington, USA 6036 Richmond hwy., Alexandria, VA, 2230</li>
+                        <li class="py-2"><i class="fas fa-mobile-alt"></i>    +1 (409) 987–5874</li>
+                        <li class="py-2"><i class="far fa-envelope"></i> nailsempire@gmail.com</li>
+
+                    </ul>
+                </div>
+                <div class="col-xl-3 col-lg-3 footer__heading">
+                    <h2 class="footer__divider">Navigation</h2>
+                    <ul class="pt-3">
+                          <li class="pb-1">
+                            <a href="index.html">Home</a>
+                          </li>
+                          <li class="py-1">
+                            <a href="about.html">About</a>
+                          </li>
+                          <li class="py-1">
+                            <a href="services.html">Services</a>
+                          </li>
+                          <li class="py-1">
+                            <a href="works.html">Works</a>
+                          </li>
+                          <li class="py-1">
+                            <a href="contact.html">Contact</a>
+                          </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- end of footer -->
+    <!-- copyright -->
+    <section class="footer__copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p class="mt-3">Copyright &copy; 2020 All rights reserved | This template is made <i class="fas fa-heart"></i> by FRN</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of copyright -->
 
 
 
